add station to db & edit station table constraints
