# backend/pkg/api/stations.go
@@ -24,9 +24,9 @@ func handleStations(r chi.Router) {
 // @Param page path int true "Page number"
 // @Router /api/stations/page/{page} [get]
 // @Success 200 {object} types.Station
-// @Failure 404 {object} types.ErrorResponse
-// @Failure 400 {object} types.ErrorResponse
-// @Failure 500 {object} types.ErrorResponse
+// @Failure 404 {object} types.JSONResponse
+// @Failure 400 {object} types.JSONResponse
+// @Failure 500 {object} types.JSONResponse
 func getStations(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Content-Type", "application/json")
@@ -35,17 +35,17 @@ func getStations(w http.ResponseWriter, r *http.Request) {
 	pageInt, err := strconv.Atoi(page)
 
 	if err != nil || pageInt < 1 {
-		sendJSONError("Invalid parameter.", http.StatusBadRequest, w)
+		sendJSONResponse("Invalid parameter.", http.StatusBadRequest, w)
 		return
 	}
 
 	stations, err := db.GetStations(pageInt, PAGE_LIMIT)
 	if err != nil {
-		sendJSONError(err.Error(), http.StatusInternalServerError, w)
+		sendJSONResponse(err.Error(), http.StatusInternalServerError, w)
 		return
 	}
 	if len(stations) == 0 {
-		sendJSONError("No stations found", http.StatusNotFound, w)
+		sendJSONResponse("No stations found", http.StatusNotFound, w)
 		return
 	}
 
@@ -63,9 +63,9 @@ func getStations(w http.ResponseWriter, r *http.Request) {
 // @Param name path string true "substring/name of station"
 // @Router /api/stations/page/{page}/{name} [get]
 // @Success 200 {object} types.Station
-// @Failure 404 {object} types.ErrorResponse
-// @Failure 400 {object} types.ErrorResponse
-// @Failure 500 {object} types.ErrorResponse
+// @Failure 404 {object} types.JSONResponse
+// @Failure 400 {object} types.JSONResponse
+// @Failure 500 {object} types.JSONResponse
 func getStationsByName(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Content-Type", "application/json")
@@ -75,17 +75,17 @@ func getStationsByName(w http.ResponseWriter, r *http.Request) {
 	pageInt, err := strconv.Atoi(page)
 
 	if err != nil || pageInt < 1 {
-		sendJSONError("Invalid parameters", http.StatusBadRequest, w)
+		sendJSONResponse("Invalid parameters", http.StatusBadRequest, w)
 		return
 	}
 
 	stations, err := db.GetStationsByName(pageInt, PAGE_LIMIT, name)
 	if err != nil {
-		sendJSONError(err.Error(), http.StatusInternalServerError, w)
+		sendJSONResponse(err.Error(), http.StatusInternalServerError, w)
 		return
 	}
 	if len(stations) == 0 {
-		sendJSONError("No stations found", http.StatusNotFound, w)
+		sendJSONResponse("No stations found", http.StatusNotFound, w)
 		return
 	}
 
@@ -101,32 +101,36 @@ func getStationsByName(w http.ResponseWriter, r *http.Request) {
 // @Body types.Station
 // @Param   addStationRequest body types.StationRequest true "New station"
 // @Success 200 {object} types.Station
-// @Failure 404 {object} types.ErrorResponse
-// @Failure 400 {object} types.ErrorResponse
-// @Failure 500 {object} types.ErrorResponse
+// @Failure 404 {object} types.JSONResponse
+// @Failure 400 {object} types.JSONResponse
+// @Failure 500 {object} types.JSONResponse
 func addStation(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Content-Type", "application/json")
 
-	var st types.StationRequest
+	var station types.StationRequest
 
 	dec := json.NewDecoder(r.Body)
 	dec.DisallowUnknownFields()
 
-	err := dec.Decode(&st)
+	err := dec.Decode(&station)
 	if err != nil {
-		sendJSONError("Invalid body", http.StatusBadRequest, w)
+		sendJSONResponse("Invalid body", http.StatusBadRequest, w)
 		return
 	}
 
 	validate := validator.New()
-	if err := validate.Struct(st); err != nil {
-		sendJSONError("Invalid body", http.StatusBadRequest, w)
+	if err := validate.Struct(station); err != nil {
+		sendJSONResponse("Invalid body", http.StatusBadRequest, w)
 		return
 	}
 
-	// TODO add to db
+	err = db.AddStation(&station)
+	if err != nil {
+		sendJSONResponse(err.Error(), http.StatusInternalServerError, w)
+		return
+	}
 
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(st)
+	sendJSONResponse("Station added succesfully!", http.StatusOK, w)
 }
